[gd_scene load_steps=26 format=2]

[ext_resource path="res://Assets/Images/inventory_icons/Resource/nails.png" type="Texture" id=1]
[ext_resource path="res://Assets/Images/Misc/button.png" type="Texture" id=2]
[ext_resource path="res://Assets/Themes/MenuTitle.tres" type="Theme" id=3]
[ext_resource path="res://Assets/Images/Inventory UI/inventory1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Images/Inventory UI/gear icon.png" type="Texture" id=5]
[ext_resource path="res://World/Player/Player/UserInterface/scripts/PetUI.gd" type="Script" id=6]
[ext_resource path="res://InventoryLogic/Slot.gd" type="Script" id=7]
[ext_resource path="res://Assets/Images/IC Kitties/SpriteFrames/Blue.tres" type="SpriteFrames" id=8]
[ext_resource path="res://Assets/Themes/button_theme.tres" type="Theme" id=9]
[ext_resource path="res://Assets/Themes/options.tres" type="Theme" id=10]
[ext_resource path="res://World/Player/Player/UserInterface/scenes/OptionsMenu.tscn" type="PackedScene" id=11]
[ext_resource path="res://Assets/Images/inventory_icons/Placable object/stone chest.png" type="Texture" id=12]
[ext_resource path="res://Assets/Images/Inventory UI/exit icon.png" type="Texture" id=13]
[ext_resource path="res://Assets/Images/Inventory UI/inventory button.png" type="Texture" id=14]
[ext_resource path="res://Assets/Images/placable_object_preview/campfire.png" type="Texture" id=15]
[ext_resource path="res://InventoryLogic/CraftingItemDescription.tscn" type="PackedScene" id=16]
[ext_resource path="res://Assets/Images/Misc/large button.png" type="Texture" id=17]
[ext_resource path="res://InventoryLogic/ItemDescription.tscn" type="PackedScene" id=18]
[ext_resource path="res://NFTScene/CraftingMenuNftScene.gd" type="Script" id=19]
[ext_resource path="res://NFTScene/InventoryNftScene.gd" type="Script" id=20]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 48, 44 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 30, 14 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 17 )
region_rect = Rect2( 0, 0, 46, 14 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 30, 14 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 30, 14 )

[node name="InventoryNftScene" type="Node2D"]
script = ExtResource( 20 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 120.0
margin_bottom = 137.0
grow_vertical = 0
rect_scale = Vector2( 3, 3 )
mouse_filter = 2
texture = ExtResource( 4 )

[node name="Title" type="Label" parent="."]
margin_left = 18.0
margin_top = 18.0
margin_right = 539.0
margin_bottom = 131.0
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 6
custom_constants/shadow_offset_y = 6
text = "INVENTORY"
align = 1

[node name="ItemDescription" parent="." instance=ExtResource( 18 )]
visible = false
z_index = 2

[node name="CraftingMenuNftScene" type="Node2D" parent="."]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 19 )

[node name="CraftingItemDescription" parent="CraftingMenuNftScene" instance=ExtResource( 16 )]

[node name="CampfireArea" type="Area2D" parent="CraftingMenuNftScene"]
position = Vector2( -132, -54 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CraftingMenuNftScene/CampfireArea"]
position = Vector2( 260, 366 )
shape = SubResource( 1 )

[node name="campfire" type="Sprite" parent="CraftingMenuNftScene"]
position = Vector2( 128, 306 )
scale = Vector2( 3, 3 )
texture = ExtResource( 15 )

[node name="SoundEffects" type="AudioStreamPlayer" parent="CraftingMenuNftScene"]
bus = "Bus1"

[node name="Tween" type="Tween" parent="CraftingMenuNftScene"]

[node name="Buttons" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 422.0
margin_top = 120.0
margin_right = 422.0
margin_bottom = 120.0

[node name="Inventory" type="Button" parent="Buttons"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -115.0
margin_top = -6.0
margin_right = -67.0
margin_bottom = 42.0

[node name="Crafting" type="Button" parent="Buttons"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -113.0
margin_top = 48.0
margin_right = -65.0
margin_bottom = 96.0

[node name="Options" type="Button" parent="Buttons"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -113.0
margin_top = 102.0
margin_right = -65.0
margin_bottom = 150.0

[node name="Quit" type="Button" parent="Buttons"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -113.0
margin_top = 157.0
margin_right = -65.0
margin_bottom = 205.0

[node name="ExitButton" type="Area2D" parent="Buttons"]
position = Vector2( 130, 73 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Buttons/ExitButton"]
position = Vector2( 3.05176e-05, -4.76837e-07 )
polygon = PoolVector2Array( -263, -124, -248, -114, -230, -114, -214, -123, -204, -140, -204, -159, -212, -174, -227, -184, -247, -184, -264, -175 )

[node name="InventoryIcon" type="TextureRect" parent="Buttons"]
margin_left = -106.0
margin_top = 4.0
margin_right = -78.0
margin_bottom = 32.0
mouse_filter = 2
texture = ExtResource( 12 )
expand = true

[node name="CraftingIcon" type="TextureRect" parent="Buttons"]
margin_left = -107.0
margin_top = 60.0
margin_right = -79.0
margin_bottom = 88.0
mouse_filter = 2
texture = ExtResource( 1 )
expand = true

[node name="OptionsIcon" type="TextureRect" parent="Buttons"]
margin_left = -107.0
margin_top = 113.0
margin_right = -79.0
margin_bottom = 141.0
mouse_filter = 2
texture = ExtResource( 5 )
expand = true

[node name="ExitIcon" type="TextureRect" parent="Buttons"]
margin_left = -110.0
margin_top = 167.0
margin_right = -82.0
margin_bottom = 195.0
mouse_filter = 2
texture = ExtResource( 13 )
expand = true

[node name="QuitMenu" type="Control" parent="."]
visible = false
margin_left = 71.0
margin_top = 63.0
margin_right = 111.0
margin_bottom = 103.0

[node name="ExitToTitleButton" type="TextureButton" parent="QuitMenu"]
margin_left = 83.0
margin_top = 248.0
margin_right = 391.0
margin_bottom = 437.0
texture_normal = ExtResource( 14 )
expand = true
stretch_mode = 4

[node name="ExitToTitle" type="Label" parent="QuitMenu"]
margin_left = -35.0
margin_top = 294.0
margin_right = 693.0
margin_bottom = 388.0
rect_scale = Vector2( 0.75, 0.75 )
theme = ExtResource( 9 )
text = "Exit to title"
align = 1

[node name="QuitButton" type="TextureButton" parent="QuitMenu"]
margin_left = 83.0
margin_top = 437.0
margin_right = 391.0
margin_bottom = 626.0
texture_normal = ExtResource( 14 )
expand = true
stretch_mode = 4

[node name="Quit" type="Label" parent="QuitMenu"]
margin_left = -35.0
margin_top = 483.0
margin_right = 692.0
margin_bottom = 577.0
rect_scale = Vector2( 0.75, 0.75 )
theme = ExtResource( 9 )
text = "Quit"
align = 1

[node name="OptionsMenu" parent="." instance=ExtResource( 11 )]
margin_left = 33.0
margin_top = 32.0
margin_right = 33.0
margin_bottom = 32.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="InventoryMenu" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="InventorySlots" type="GridContainer" parent="InventoryMenu"]
margin_left = 27.0
margin_top = 124.0
margin_right = 279.0
margin_bottom = 223.0
custom_constants/vseparation = 3
custom_constants/hseparation = 3
columns = 5

[node name="Slot1" type="Panel" parent="InventoryMenu/InventorySlots"]
margin_right = 48.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
script = ExtResource( 7 )

[node name="Slot2" type="Panel" parent="InventoryMenu/InventorySlots"]
margin_left = 51.0
margin_right = 99.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
script = ExtResource( 7 )

[node name="Slot3" type="Panel" parent="InventoryMenu/InventorySlots"]
margin_left = 102.0
margin_right = 150.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
script = ExtResource( 7 )

[node name="Slot4" type="Panel" parent="InventoryMenu/InventorySlots"]
margin_left = 153.0
margin_right = 201.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
script = ExtResource( 7 )

[node name="Slot5" type="Panel" parent="InventoryMenu/InventorySlots"]
margin_left = 204.0
margin_right = 252.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
script = ExtResource( 7 )

[node name="Slot6" type="Panel" parent="InventoryMenu/InventorySlots"]
margin_top = 51.0
margin_right = 48.0
margin_bottom = 99.0
rect_min_size = Vector2( 48, 48 )
script = ExtResource( 7 )

[node name="Slot7" type="Panel" parent="InventoryMenu/InventorySlots"]
margin_left = 51.0
margin_top = 51.0
margin_right = 99.0
margin_bottom = 99.0
rect_min_size = Vector2( 48, 48 )
script = ExtResource( 7 )

[node name="Slot8" type="Panel" parent="InventoryMenu/InventorySlots"]
margin_left = 102.0
margin_top = 51.0
margin_right = 150.0
margin_bottom = 99.0
rect_min_size = Vector2( 48, 48 )
script = ExtResource( 7 )

[node name="Slot9" type="Panel" parent="InventoryMenu/InventorySlots"]
margin_left = 153.0
margin_top = 51.0
margin_right = 201.0
margin_bottom = 99.0
rect_min_size = Vector2( 48, 48 )
script = ExtResource( 7 )

[node name="Slot10" type="Panel" parent="InventoryMenu/InventorySlots"]
margin_left = 204.0
margin_top = 51.0
margin_right = 252.0
margin_bottom = 99.0
rect_min_size = Vector2( 48, 48 )
script = ExtResource( 7 )

[node name="PetUI" type="Control" parent="InventoryMenu"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 6 )

[node name="PetLabel" type="Label" parent="InventoryMenu/PetUI"]
margin_left = 49.0
margin_top = 672.0
margin_right = 141.0
margin_bottom = 763.0
rect_scale = Vector2( 1.25, 1.25 )
theme = ExtResource( 10 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
text = "Pet:"
valign = 1

[node name="AnimatedSprite" type="AnimatedSprite" parent="InventoryMenu/PetUI"]
position = Vector2( 257, 684 )
scale = Vector2( 4, 4 )
frames = ExtResource( 8 )
animation = "idle right"
frame = 14
playing = true

[node name="HideShowButton" type="Button" parent="InventoryMenu/PetUI"]
margin_left = 393.0
margin_top = 688.0
margin_right = 554.0
margin_bottom = 767.0
theme = ExtResource( 10 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Hide"

[connection signal="input_event" from="CraftingMenuNftScene/CampfireArea" to="CraftingMenuNftScene" method="_on_CampfireArea_input_event"]
[connection signal="mouse_entered" from="CraftingMenuNftScene/CampfireArea" to="CraftingMenuNftScene" method="_on_CampfireArea_mouse_entered"]
[connection signal="mouse_exited" from="CraftingMenuNftScene/CampfireArea" to="CraftingMenuNftScene" method="_on_CampfireArea_mouse_exited"]
[connection signal="pressed" from="Buttons/Inventory" to="." method="_on_Inventory_pressed"]
[connection signal="pressed" from="Buttons/Crafting" to="." method="_on_Crafting_pressed"]
[connection signal="pressed" from="Buttons/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Buttons/Quit" to="." method="_on_Quit_pressed"]
[connection signal="input_event" from="Buttons/ExitButton" to="." method="_on_ExitButton_input_event"]
[connection signal="pressed" from="InventoryMenu/PetUI/HideShowButton" to="InventoryMenu/PetUI" method="_on_HideShowButton_pressed"]
